# SpecProc

./: .gitignore  CONFIGURATION_GUIDE_CN.md  DOCUMENTATION.md  INSTALLATION_GUIDE.md  INSTALLATION_GUIDE_CN.md  PIPELINE_FLOWCHART.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_CN.md  check_locals.py  check_locals_all.py  check_locals_ext.py  check_locals_src.py  default_config.cfg  file.tmp  fix_load.py  generate_pipeline_diagram.py  get_tb.py  install.sh  move_methods.py  pyproject.toml  requirements.txt  run.py  scratch._basic.py  scratch.py  setup.py  specproc.cfg.example  test_core.py  test_gui_init.py  test_gui_steps.py  test_overscan.py  test_pdf.py  test_stages.py
calib_data/: README.md  README_CN.md
calib_data/telescopes/xinglong216hrs/: xinglong_thar_lines.csv
docs/: SpecProc_Evaluation_Report.md
src/: __init__.py  main.py
src/config/: __init__.py  config_manager.py
src/core/: __init__.py  background_removal.py  basic_reduction.py  bias_correction.py  cosmic_removal.py  data_structures.py  de_blazing.py  extraction.py  flat_correction.py  flat_fielding.py  grating_trace.py  grating_trace_simple.py  order_stitching.py  order_tracing.py  overscan_correction.py  processing_pipeline.py  scattered_light.py  wave_calibration.py
src/gui/: __init__.py  main_window.py  settings_dialog.py
src/plotting/: spectra_plotter.py
src/utils/: __init__.py  fits_io.py  image_processing.py  overscan.py
